--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "homepage": "https://github.com/thetispro/laravel5-setting",
     "keywords": ["laravel", "config", "setting"],
     "license": "MIT",
+    "version":"1.1.0",
     "authors": [
         {
             "name": "Phil Foulston",
@@ -11,12 +12,12 @@
         },
         {
             "name": "Eric Leroy",
-            "email": "thetispro@me.com"
+            "email": "thetispro@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "~5"
+        "php": ">=5.6.0",
+        "illuminate/support": "~5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
